# Tucil2_13523027_13523090

./: CMakeLists.txt  README.md  build.bat  build.sh  clean.bat  clean.sh  run.bat  run.sh
src/comps/: BasicInputManager.cpp  CompressionAnalyzer.cpp  ErrorCalculation.cpp  GifGenerator.cpp  ImageProcessor.cpp  InputManager.cpp  QuadTree.cpp  main.cpp
src/header/: BasicInputManager.hpp  CompressionAnalyzer.hpp  CompressionParams.hpp  ErrorCalculator.hpp  GifGenerator.hpp  ImageProcessor.hpp  InputManager.hpp  Pixel.hpp  QuadTree.hpp
